Fix username length overflow in matchesview

--- a/src/app/styles/MatchView.module.css
+++ b/src/app/styles/MatchView.module.css
@@ -59,7 +59,6 @@
   border-radius: 2px;
   background: #464646;
   color: #fff;
-  box-shadow: 1px 1px 4px 0px rgba(143, 132, 143, 1);
 }
 
 .loseBackground {
